tests/org.eclipse.php.core.tests/workspace/errors/php53/testTypeReferenceError10.pdtt
--TEST--
Bug 559657 - Validator warns about unresolved types when classes and namespaces have same name
--FILE--
<?php
namespace FFI
{

}
namespace
{

    final class FFI
    {

        /**
         *
         * @param \FFI\CData $ptr
         *            The handle of the pointer to a C data structure.
         */
        public static function isNull(\FFI\CData &$ptr)
        {
        }
    }
}
namespace FFI
{

    final class CData
    {
    }
}
--EXPECT--
